--- a/_posts/2021-12-25-Books-I-Read-In-2021.markdown
+++ b/_posts/2021-12-25-Books-I-Read-In-2021.markdown
@@ -7,7 +7,7 @@ date:   2021-12-25 18:43:31 +0530
 
 ## **Career, Startup & Biography**
 
-- [Catalyst: The ultimate strategies on how to win at work and in life - Chandramouli Venkatesan]([https://www.goodreads.com/book/show/38587103-catalyst](https://www.goodreads.com/book/show/38587103-catalyst))
+- [Catalyst: The ultimate strategies on how to win at work and in life - Chandramouli Venkatesan](https://www.goodreads.com/book/show/38587103-catalyst)
 
 - [The Minimalist Entrepreneur: How Great Founders Do More with Less - Sahil Lavingia](https://www.goodreads.com/book/show/56913172-the-minimalist-entrepreneur)
 
@@ -69,7 +69,7 @@ date:   2021-12-25 18:43:31 +0530
 
 - [Homo Deus: A History of Tomorrow - Yuval Noah Harari](https://www.goodreads.com/book/show/31138556-homo-deus)
 
-- [21 Lessons for the 21st Century - Yuval Noah Harari]([https://www.goodreads.com/book/show/38820046-21-lessons-for-the-21st-century)
+- [21 Lessons for the 21st Century - Yuval Noah Harari](https://www.goodreads.com/book/show/38820046-21-lessons-for-the-21st-century)
 
 - [Humankind: A Hopeful History - Rutger Bregman](https://www.goodreads.com/book/show/52879286-humankind)
 
